# torch_loops

./: .gitignore  README.md  pyproject.toml
tests/: test_torch_loops.py
torch_loops/: __init__.py  prelude.py  torch_loops.py  types.py
