[tool.poetry]
name = "torch_loops"
version = "0.1.0"
description = "simple loops for pytorch"
authors = ["yohan-pg <pg.yohan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
