[tool.poetry]
name = "torch_loops"
version = "0.3.0"
description = "simple loops for pytorch"
authors = ["yohan-pg <pg.yohan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
